# SAMM-Sui-Evaluation

./: .gitignore  README.md
SAMM-evaluation/: README.md
SAMM-evaluation/omniswap/: Move.toml
SAMM-evaluation/samm/: Move.toml
SAMM-evaluation/samm-boost/sources/: implements.move
SAMM-evaluation/samm/test_coins/: Move.toml
SAMM-evaluation/test-heavier-samm/src/: build_contract.rs  build_tx.rs  execution.rs  faucet.rs  main.rs
SAMM-evaluation/test-omniswap/: Cargo.toml
SAMM-evaluation/test-omniswap/src/: build_contract.rs  main.rs
SAMM-evaluation/test-samm/: Cargo.toml
SAMM-evaluation/test-samm/src/: backup.rs  build_contract.rs  build_tx.rs  execution.rs  faucet.rs  get_client.rs  main.rs  server.py  submissions.rs
sui/crates/sui-cluster-test/src/: cluster.rs  faucet.rs
sui/crates/sui-config/src/: local_ip_utils.rs
sui/crates/sui-sdk/src/: lib.rs
sui/crates/sui-swarm/src/memory/: node.rs
sui/crates/sui-test-validator/src/: main.rs
